# vibe-reading-skill-CN

./: .gitignore  LICENSE  MANIFEST.in  README.md  env.example  pyproject.toml  requirements.txt
openclaw/: SKILL.md
vibe_reading_skill_CN/: SKILL.md  __init__.py  gemini_client.py  main.py  prompts.py  skill.json  templates.py
